--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A collection of Python scripts for iSCAT microscopy data analysis
 authors = [{ name = "Marco Heisig", email = "marco.heisig@mpl.mpg.de" }]
 readme = "README.md"
 license = { text = "GPL-3.0-or-later" }
-requires-python = ">=3.12"
+requires-python = ">=3.12,<=3.13"
 dependencies = [
     "imgui[glfw,sdl2]",
     "fastplotlib[imgui]",
@@ -46,12 +46,11 @@ keywords = ["tools", "utilities", "python"]
 [dependency-groups]
 dev = [
     "ruff",
- "pre-commit",
- "pyright",
- "pytest",
- "setuptools",
- "coverage",
- "ty>=0.0.1a15",
+    "pre-commit",
+    "pyright",
+    "pytest",
+    "setuptools",
+    "coverage",
 ]
 
 
