--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,11 +12,16 @@ repos:
     - id: check-added-large-files
 
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.9.9
+  rev: v0.13.1
   hooks:
     - id: ruff-format
     - id: ruff
       args: [ --fix ]
+
+- repo: https://github.com/numpy/numpydoc
+  rev: v1.9.0
+  hooks:
+    - id: numpydoc-validation
 
 - repo: https://github.com/abravalheri/validate-pyproject
   rev: v0.23
@@ -25,7 +30,7 @@ repos:
       additional_dependencies: ["validate-pyproject-schema-store[all]"]
 
 - repo: https://github.com/RobertCraigie/pyright-python
-  rev: v1.1.396
+  rev: v1.1.405
   hooks:
     - id: pyright
 
