Implement and test .zarr input and output

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fsspec[fuse]",
     "imageio[ffmpeg]",
     "numpy",
+    "pyarrow",
     "scipy",
     "scikit-image",
     "trackpy",
