--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "bioio-tifffile",
     "bioio-tiff-glob",
     "bioio-imageio>=1.2",
+    "ome-types",
     "xarray",
     "dask",
 ]
