Ensure bioio dependencies have certain minimum versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,8 @@ dependencies = [
     "bioio-imageio",
     "bioio-lif",
     "bioio-nd2",
-    "bioio-ome-tiff",
-    "bioio-ome-zarr",
+    "bioio-ome-tiff>=1.4",
+    "bioio-ome-zarr>=2.2",
     "bioio-sldy",
     "bioio-tifffile",
     "bioio-tiff-glob",
