--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,11 +12,11 @@ repos:
     - id: check-added-large-files
 
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.13.1
+  rev: v0.14.0
   hooks:
-    - id: ruff-format
-    - id: ruff
+    - id: ruff-check
       args: [ --fix ]
+    - id: ruff-format
 
 - repo: https://github.com/numpy/numpydoc
   rev: v1.9.0
@@ -24,13 +24,13 @@ repos:
     - id: numpydoc-validation
 
 - repo: https://github.com/abravalheri/validate-pyproject
-  rev: v0.23
+  rev: v0.24.1
   hooks:
     - id: validate-pyproject
       additional_dependencies: ["validate-pyproject-schema-store[all]"]
 
 - repo: https://github.com/RobertCraigie/pyright-python
-  rev: v1.1.405
+  rev: v1.1.406
   hooks:
     - id: pyright
 
